# allied_health_education_agent

./: .dockerignore  .env.example  .gitignore  README.md  pyproject.toml  scripts_sample_linkage_review.py
backend/: __init__.py
backend/app/: main.py
backend/app/agents/: __init__.py  critic.py  extraction.py  graph.py  mindmap.py  orchestrator.py  research.py  state.py  verification.py
backend/app/api/: security.py
backend/app/api/routes/: educator.py  health.py  index.py  mindmap.py  search.py  verify.py
backend/app/core/: config.py  logging.py
backend/app/db/: __init__.py  postgres.py  qdrant.py  redis.py
backend/app/retrieval/: __init__.py  embedder.py  hybrid.py  indexer.py
backend/app/schemas/: api.py
backend/app/services/: chat.py  citations.py  confidence.py  educator.py  faculty_review.py  gap_finder.py  llm_json.py  teaching_pack.py
docker/: Dockerfile  compose.sh  docker-compose.yml
frontend/: api_client.py  app.py
frontend/components/: educator_panel.py  graph_viz.py  guided_starters.py  role_selector.py  source_panel.py  teaching_list.py
frontend/pages/: 1_Teaching_Connections.py  2_Evidence_and_Review.py  3_Find_Teaching_Materials.py  4_Curriculum_Builder.py  5_Gap_Finder.py  6_Teaching_Pack.py
tests/integration/: test_api_smoke.py
tests/unit/: test_chat.py  test_confidence.py  test_critic.py  test_hybrid.py  test_verification.py
